--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eShop</title>
+    <title>Интернет-магазин</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header class="top-menu">
-        <button class="cart-button" type="button">Корзина</button>
+    <header>
+        <div class="logo">Интернет-магазин</div>
+        <button class="btn-cart" type="button">Корзина</button>
     </header>
     <main>
-        <div class="goods-list"></div>
+        <div class="products"></div>
     </main>
     <script src="index.js"></script>
 </body>
