--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="normalize.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
+    <title>eShop</title>
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="logo">Интернет-магазин</div>
-        <button class="btn-cart" type="button">Корзина</button>
+        <button class="btn-cart">корзина</button>
     </header>
-    <main>
-        <div class="products"></div>
-    </main>
+    <div class="products"></div>
+    <div class="bascet" hidden></div>
     <script src="index.js"></script>
 </body>
 
